--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
+    "python.pythonPath": "C:\\Users\\Administrator.000\\envs\\djang11.7\\Scripts\\python.exe",
     "python.linting.pylintEnabled": false
 }
