--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Administrator.000\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
+    "python.pythonPath": "C:\\Users\\Administrator\\envs\\dj11.7\\Scripts\\python.exe",
     "python.linting.pylintEnabled": false
 }
