--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "python.pythonPath": "C:\\Users\\Administrator\\envs\\dj11.7\\Scripts\\python.exe",
     "python.linting.pylintEnabled": false,
-    "python.testing.pyTestArgs": [
+    "python.testing.pytestArgs": [
         "dayliy"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pyTestEnabled": true
+    "python.testing.pytestEnabled": true
 }
